appId: com.arasdigital.nesymobile.rstest
---
- runFlow:
    when:
      visible: "Write barcode number"
    commands:
      - pressKey: Back
- runFlow:
    when:
      visible: "PRINT"
    commands:
      - pressKey: Back
- extendedWaitUntil:
    visible:
      id: "com.arasdigital.nesymobile.rstest:id/manuel_input"
    timeout: 20000
- tapOn:
    id: "com.arasdigital.nesymobile.rstest:id/manuel_input"
- extendedWaitUntil:
    visible:
      id: "com.arasdigital.nesymobile.rstest:id/et_input_dialog_barcode_number"
    timeout: 12000
- tapOn:
    id: "com.arasdigital.nesymobile.rstest:id/et_input_dialog_barcode_number"
- eraseText: 80
- inputText: "SCANCODE"
- hideKeyboard
- tapOn:
    id: "com.arasdigital.nesymobile.rstest:id/btn_ok"
- runFlow:
    when:
      visible:
        id: "com.arasdigital.nesymobile.rstest:id/btn_arasDg_positive_button"
    commands:
      - tapOn:
          id: "com.arasdigital.nesymobile.rstest:id/btn_arasDg_positive_button"
- extendedWaitUntil:
    visible:
      id: "com.arasdigital.nesymobile.rstest:id/btnDelivery"
    timeout: 20000
- tapOn:
    id: "com.arasdigital.nesymobile.rstest:id/btnDelivery"
- extendedWaitUntil:
    visible:
      id: "com.arasdigital.nesymobile.rstest:id/tie_delivery_name"
    timeout: 30000
- tapOn:
    id: "com.arasdigital.nesymobile.rstest:id/tie_delivery_name"
- eraseText: 40
- inputText: "Test Receiver"
- pressKey: Enter
- hideKeyboard
- scrollUntilVisible:
    element:
      id: "com.arasdigital.nesymobile.rstest:id/btn_deliver"
    direction: DOWN
    timeout: 20000
- swipe:
    start: "20%, 78%"
    end: "85%, 78%"
    duration: 700
- tapOn:
    id: "com.arasdigital.nesymobile.rstest:id/btn_deliver"
- runFlow:
    when:
      visible:
        id: "com.arasdigital.nesymobile.rstest:id/btnDely"
    commands:
      - tapOn:
          id: "com.arasdigital.nesymobile.rstest:id/btnDely"
- runFlow:
    when:
      visible:
        id: "com.arasdigital.nesymobile.rstest:id/btn_arasDg_positive_button"
    commands:
      - tapOn:
          id: "com.arasdigital.nesymobile.rstest:id/btn_arasDg_positive_button"
- runFlow:
    when:
      visible: "Cash"
    commands:
      - tapOn: "Cash"
- runFlow:
    when:
      visible:
        id: "com.arasdigital.nesymobile.rstest:id/btn_arasDg_positive_button"
    commands:
      - tapOn:
          id: "com.arasdigital.nesymobile.rstest:id/btn_arasDg_positive_button"
- runFlow:
    when:
      visible: "PRINT"
    commands:
      - pressKey: Back
- runFlow:
    when:
      visible:
        id: "com.arasdigital.nesymobile.rstest:id/tvInvoiceSummary"
    commands:
      - pressKey: Back
- extendedWaitUntil:
    visible: "Stop List"
    timeout: 30000
    optional: true
