appId: com.arasdigital.nesymobile.rstest
---
- runFlow:
    when:
      visible: "PRINT"
    commands:
      - tapOn: "PRINT"
- runFlow:
    when:
      visible:
        id: "com.arasdigital.nesymobile.rstest:id/btn_arasDg_positive_button"
    commands:
      - tapOn:
          id: "com.arasdigital.nesymobile.rstest:id/btn_arasDg_positive_button"
- pressKey: back
